fixed img spacing

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 img{
-    height: 400px !important;
-    width: 400px !important;
+    height: 100% !important;
+    width: 100% !important;
 }
